name:          bech32
version:       1.0.0
synopsis:      Implementation of the Bech32 cryptocurrency address format (BIP 0173).
description:   Implementation of the Bech32 cryptocurrency address format documented in the
               BIP (Bitcoin Improvement Proposal) 0173.
author:        IOHK Engineering Team
maintainer:    operations@iohk.io, erikd@mega-nerd.com
copyright:     2017 Marko Bencun, 2019 IOHK
license:       Apache-2.0
license-file:  LICENSE
homepage:      https://github.com/input-output-hk/bech32
bug-reports:   https://github.com/input-output-hk/bech32/issues
category:      Web
build-type:    Simple
extra-source-files:  ChangeLog.md
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/bech32.git

flag werror
    description: Enable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      array
    , base                                  < 4.14
    , bytestring
    , containers
    , extra
    , text
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Binary.Bech32
      Codec.Binary.Bech32.Internal

test-suite bech32-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
      -O2
      -Wall
  if (flag(werror))
    ghc-options:
      -Werror
  build-depends:
      base
    , bech32
    , bytestring
    , containers
    , deepseq
    , extra
    , hspec
    , QuickCheck
    , text
    , vector
  build-tools:
      hspec-discover
  main-is:
      Main.hs
  other-modules:
      Codec.Binary.Bech32Spec
