name:               bech32-th
version:            1.1.1
synopsis:           Template Haskell extensions to the Bech32 library.
description:        Template Haskell extensions to the Bech32 library, including
                    quasi-quoters for compile-time checking of Bech32 string
                    literals.
author:             IOHK Engineering Team
maintainer:         operations@iohk.io, erikd@mega-nerd.com, jonathan.knowles@iohk.io
copyright:          2020 IOHK
license:            Apache-2.0
license-file:       LICENSE
homepage:           https://github.com/input-output-hk/bech32
bug-reports:        https://github.com/input-output-hk/bech32/issues
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/bech32.git

flag release
  description: Strict compiler warning checks.
  default: False
  manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall -Wcompat -fwarn-redundant-constraints
  if flag(release)
    ghc-options: -Werror
  build-depends:
      base >= 4.11.1.0 && < 5
    , bech32 >= 1.1.1
    , template-haskell
    , text
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Binary.Bech32.TH

test-suite bech32-th-test
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -threaded -rtsopts -with-rtsopts=-N
  if flag(release)
    ghc-options: -Werror
  build-depends:
      base
    , bech32
    , bech32-th
    , hspec
    , template-haskell
  build-tools:
      hspec-discover
  main-is:
      Main.hs
  other-modules:
      Codec.Binary.Bech32.THSpec
