cabal-version: 3.0
name:          bech32
version:       1.1.7
synopsis:      Implementation of the Bech32 cryptocurrency address format (BIP 0173).
description:   Implementation of the Bech32 cryptocurrency address format documented in the
               BIP (Bitcoin Improvement Proposal) 0173.
author:        IOHK Engineering Team
maintainer:    operations@iohk.io, erikd@mega-nerd.com, mail@jonathanknowles.net
copyright:     2017 Marko Bencun, 2019-2023 IOHK
license:       Apache-2.0
license-file:  LICENSE
homepage:      https://github.com/input-output-hk/bech32
bug-reports:   https://github.com/input-output-hk/bech32/issues
category:      Web
build-type:    Simple

extra-doc-files:
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/bech32.git

flag release
  description: Strict compiler warning checks.
  default: False
  manual: True

flag static
  description: Try to build a static executable.
  default: False
  manual: True

common dependency-array
    build-depends:array                           >= 0.5.4.0    && < 0.6
common dependency-base
    build-depends:base                            >= 4.14.3.0   && < 4.21
common dependency-base58-bytestring
    build-depends:base58-bytestring               >= 0.1.0      && < 0.2
common dependency-bytestring
    build-depends:bytestring                      >= 0.10.12.0  && < 0.13
common dependency-containers
    build-depends:containers                      >= 0.6.5.1    && < 0.8
common dependency-deepseq
    build-depends:deepseq                         >= 1.4.4.0    && < 1.6
common dependency-extra
    build-depends:extra                           >= 1.7.14     && < 1.8
common dependency-hspec
    build-depends:hspec                           >= 2.11.7     && < 2.12
common dependency-memory
    build-depends:memory                          >= 0.18.0     && < 0.19
common dependency-optparse-applicative
    build-depends:optparse-applicative            >= 0.18.1.0   && < 0.19
common dependency-prettyprinter
    build-depends:prettyprinter                   >= 1.7.1      && < 1.8
common dependency-prettyprinter-ansi-terminal
    build-depends:prettyprinter-ansi-terminal     >= 1.1.3      && < 1.2
common dependency-process
    build-depends:process                         >= 1.6.13.2   && < 1.7
common dependency-QuickCheck
    build-depends:QuickCheck                      >= 2.14.3     && < 2.16
common dependency-text
    build-depends:text                            >= 1.2.4.1    && < 2.2
common dependency-vector
    build-depends:vector                          >= 0.13.1.0   && < 0.14

library
  import:
    , dependency-array
    , dependency-base
    , dependency-bytestring
    , dependency-containers
    , dependency-extra
    , dependency-text
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall -Wcompat -fwarn-redundant-constraints
  if flag(release)
    ghc-options: -Werror
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Binary.Bech32
      Codec.Binary.Bech32.Internal

executable bech32
  import:
    , dependency-base
    , dependency-base58-bytestring
    , dependency-bytestring
    , dependency-extra
    , dependency-memory
    , dependency-optparse-applicative
    , dependency-prettyprinter
    , dependency-prettyprinter-ansi-terminal
    , dependency-text
  build-depends:
    , bech32
  main-is: Main.hs
  other-modules:
      Paths_bech32
  autogen-modules:
      Paths_bech32
  hs-source-dirs:
      app
  ghc-options:
      -Wall -Wcompat -fwarn-redundant-constraints
      -threaded -rtsopts -with-rtsopts=-N
  if flag(release)
    ghc-options: -Werror
  if flag(static)
    ghc-options: -static
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010

test-suite bech32-test
  import:
    , dependency-base
    , dependency-base58-bytestring
    , dependency-bytestring
    , dependency-containers
    , dependency-deepseq
    , dependency-extra
    , dependency-hspec
    , dependency-memory
    , dependency-process
    , dependency-QuickCheck
    , dependency-text
    , dependency-vector
  build-depends:
    , bech32
  build-tool-depends:
    , bech32:bech32
    , hspec-discover:hspec-discover
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -threaded -rtsopts -with-rtsopts=-N
  if flag(release)
    ghc-options: -Werror
  main-is:
      Main.hs
  other-modules:
      AppSpec
      Codec.Binary.Bech32Spec
